[package]
name = "webshare-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.30", features = ["full"] }
hyper-proxy = "0.9.1"
cron = "0.12.1"
tokio-cron-scheduler = "0.13.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
headers = "0.4.0"
rand = "0.8.5"
lazy_static = "1.5.0"
dotenv = "0.15.0"
hyper-native-tls = "0.3.0"
reqwest = { version = "0.12.8", features = ["__rustls", "native-tls", "json"] }